package cli;

public enum CLIAction {
    Start,
    Stop,
    Update,
    Execute
}
