@startuml

title __CLI's Class Diagram__\n

  namespace cli {
    class cli.CLI {
        {static} + DEBUG_MODE : boolean
        {static} + ROOT_APP : String
        - commands : HashMap<String, Command>
        + CLI()
        + execute()
        + getCommands()
        + help()
        {static} + main()
        + start()
        + stop()
        + triggerEvent()
    }
  }
  

  namespace cli {
    enum CLIAction {
      Execute
      Start
      Stop
      Update
    }
  }
  

  namespace cli {
    class cli.CLIEvent {
        + CLIEvent()
        + CLIEvent()
        + CLIEvent()
    }
  }
  

  namespace cli {
    class cli.CLIEventHandler {
        + actionPerformed()
        - onStart()
        - onStop()
        - onUpdate()
    }
  }
  

  namespace cli {
    class cli.CustomDebugger {
        {static} + log()
        {static} + print()
    }
  }
  

  namespace cli {
    class cli.Setup {
        {static} + check()
        {static} + install()
        {static} + supportedCommands()
        {static} + uninstall()
    }
  }
  

  cli.CLI o-- cli.CLIEventHandler : eventManager
  cli.CLIEvent -up-|> java.awt.event.ActionEvent
  cli.CLIEventHandler .up.|> java.awt.event.ActionListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
